fixed a overflow-x issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,3 +48,8 @@ input, textarea {
 .MuiToolbar-root.MuiToolbar-gutters.MuiToolbar-regular.css-hyum1k-MuiToolbar-root {
   padding-right: 0px !important;
 }
+
+.table-container {
+  overflow-x: auto; /* Enable horizontal scrolling within this container */
+  -webkit-overflow-scrolling: touch; /* Smooth scrolling on touch devices */
+}
